<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.mestiripesage.gesepese.ui.camion.addCamion.CamionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1B1464"
        tools:context=".ui.camion.addCamion.AddCamionActivity">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_camion"
            android:textColor="#FEFEFE"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/spinnerCamion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.117" />

        <EditText
            android:id="@+id/editTextTextPersonName14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/immatricule"
            android:inputType="textPersonName"

            android:textColor="#FEFEFE"
            android:textColorHint="#FEFEFE"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.703" />

        <EditText
            android:id="@+id/editTextTextPersonName15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/code"
            android:inputType="textPersonName"
            android:textColor="#FEFEFE"
            android:textColorHint="#FEFEFE"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName17"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.879" />

        <EditText
            android:id="@+id/editTextTextPersonName17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:ems="10"
            android:hint="@string/tare_camion"
            android:inputType="textPersonName"
            android:textColor="#FEFEFE"
            android:textColorHint="#FEFEFE"
            app:layout_constraintBottom_toTopOf="@+id/spinnerCamion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.956" />

        <Spinner
            android:id="@+id/spinnerCamion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/spinner_backround"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toTopOf="@+id/button7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.892"

            />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background=" #4DA8DA"
            android:text="Button"
            android:onClick="@{()->viewModel.add()}"
            android:textColor="#FEFEFE"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.939" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
